refactor: can ChatGPT 5.4 Thinking fix its own problems?